// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Badge /> should render Badge with Icon 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    data-blade-component="badge"
    display="flex"
    style={
      [
        {
          "display": "flex",
        },
      ]
    }
  >
    <View
      backgroundColor="feedback.background.neutral.subtle"
      data-blade-component="base-box"
      height="20px"
      size="medium"
      style={
        [
          {
            "backgroundColor": "hsla(211, 20%, 52%, 0.09)",
            "height": 20,
            "textAlign": "left",
          },
          {
            "alignSelf": "center",
            "backgroundColor": "hsla(211, 20%, 52%, 0.09)",
            "borderRadius": 9999,
            "display": "flex",
            "flexWrap": "nowrap",
          },
        ]
      }
      textAlign="left"
    >
      <View
        alignItems="center"
        data-blade-component="base-box"
        display="flex"
        flexDirection="row"
        justifyContent="center"
        overflow="hidden"
        style={
          [
            {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "row",
              "justifyContent": "center",
              "overflow": "hidden",
              "paddingLeft": 8,
              "paddingRight": 8,
            },
          ]
        }
      >
        <View
          data-blade-component="base-box"
          display="flex"
          style={
            [
              {
                "display": "flex",
                "paddingRight": 4,
              },
            ]
          }
        >
          <RNSVGSvgView
            accessibilityElementsHidden={true}
            align="xMidYMid"
            bbHeight="12px"
            bbWidth="12px"
            data-blade-component="icon"
            fill="none"
            focusable={false}
            height="12px"
            importantForAccessibility="no-hide-descendants"
            meetOrSlice={0}
            minX={0}
            minY={0}
            style={
              [
                {
                  "backgroundColor": "transparent",
                  "borderWidth": 0,
                },
                [
                  {},
                ],
                {
                  "flex": 0,
                  "height": 12,
                  "width": 12,
                },
              ]
            }
            vbHeight={24}
            vbWidth={24}
            width="12px"
          >
            <RNSVGGroup
              fill={null}
              propList={
                [
                  "fill",
                ]
              }
            >
              <RNSVGPath
                d="M12 11C12.5523 11 13 11.4477 13 12V16C13 16.5523 12.5523 17 12 17C11.4477 17 11 16.5523 11 16V12C11 11.4477 11.4477 11 12 11Z"
                fill={
                  {
                    "payload": 4280563015,
                    "type": 0,
                  }
                }
                propList={
                  [
                    "fill",
                  ]
                }
              />
              <RNSVGPath
                d="M12 7C11.4477 7 11 7.44772 11 8C11 8.55228 11.4477 9 12 9H12.01C12.5623 9 13.01 8.55228 13.01 8C13.01 7.44772 12.5623 7 12.01 7H12Z"
                fill={
                  {
                    "payload": 4280563015,
                    "type": 0,
                  }
                }
                propList={
                  [
                    "fill",
                  ]
                }
              />
              <RNSVGPath
                clipRule={0}
                d="M1 12C1 5.92487 5.92487 1 12 1C18.0751 1 23 5.92487 23 12C23 18.0751 18.0751 23 12 23C5.92487 23 1 18.0751 1 12ZM12 3C7.02944 3 3 7.02944 3 12C3 16.9706 7.02944 21 12 21C16.9706 21 21 16.9706 21 12C21 7.02944 16.9706 3 12 3Z"
                fill={
                  {
                    "payload": 4280563015,
                    "type": 0,
                  }
                }
                fillRule={0}
                propList={
                  [
                    "fill",
                    "fillRule",
                  ]
                }
              />
            </RNSVGGroup>
          </RNSVGSvgView>
        </View>
        <Text
          accessible={true}
          color="feedback.text.neutral.intense"
          data-blade-component="text"
          fontFamily="text"
          fontSize={75}
          fontStyle="normal"
          fontWeight="medium"
          lineHeight={75}
          numberOfLines={1}
          style={
            [
              {
                "color": "hsla(211, 33%, 21%, 1)",
                "fontFamily": "Inter",
                "fontSize": 12,
                "fontStyle": "normal",
                "fontWeight": "500",
                "letterSpacing": 0,
                "lineHeight": 18,
                "marginBottom": 0,
                "marginLeft": 0,
                "marginRight": 0,
                "marginTop": 0,
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 0,
                "textDecorationLine": "none",
              },
            ]
          }
        >
          Label
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`<Badge /> should render Badge with default props 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    data-blade-component="badge"
    display="flex"
    style={
      [
        {
          "display": "flex",
        },
      ]
    }
  >
    <View
      backgroundColor="feedback.background.neutral.subtle"
      data-blade-component="base-box"
      height="20px"
      size="medium"
      style={
        [
          {
            "backgroundColor": "hsla(211, 20%, 52%, 0.09)",
            "height": 20,
            "textAlign": "left",
          },
          {
            "alignSelf": "center",
            "backgroundColor": "hsla(211, 20%, 52%, 0.09)",
            "borderRadius": 9999,
            "display": "flex",
            "flexWrap": "nowrap",
          },
        ]
      }
      textAlign="left"
    >
      <View
        alignItems="center"
        data-blade-component="base-box"
        display="flex"
        flexDirection="row"
        justifyContent="center"
        overflow="hidden"
        style={
          [
            {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "row",
              "justifyContent": "center",
              "overflow": "hidden",
              "paddingLeft": 8,
              "paddingRight": 8,
            },
          ]
        }
      >
        <Text
          accessible={true}
          color="feedback.text.neutral.intense"
          data-blade-component="text"
          fontFamily="text"
          fontSize={75}
          fontStyle="normal"
          fontWeight="medium"
          lineHeight={75}
          numberOfLines={1}
          style={
            [
              {
                "color": "hsla(211, 33%, 21%, 1)",
                "fontFamily": "Inter",
                "fontSize": 12,
                "fontStyle": "normal",
                "fontWeight": "500",
                "letterSpacing": 0,
                "lineHeight": 18,
                "marginBottom": 0,
                "marginLeft": 0,
                "marginRight": 0,
                "marginTop": 0,
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 0,
                "textDecorationLine": "none",
              },
            ]
          }
        >
          Label
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`<Badge /> should render intense emphasis information color Badge 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    data-blade-component="badge"
    display="flex"
    style={
      [
        {
          "display": "flex",
        },
      ]
    }
  >
    <View
      backgroundColor="feedback.background.information.intense"
      data-blade-component="base-box"
      height="20px"
      size="medium"
      style={
        [
          {
            "backgroundColor": "hsla(200, 84%, 44%, 1)",
            "height": 20,
            "textAlign": "left",
          },
          {
            "alignSelf": "center",
            "backgroundColor": "hsla(200, 84%, 44%, 1)",
            "borderRadius": 9999,
            "display": "flex",
            "flexWrap": "nowrap",
          },
        ]
      }
      textAlign="left"
    >
      <View
        alignItems="center"
        data-blade-component="base-box"
        display="flex"
        flexDirection="row"
        justifyContent="center"
        overflow="hidden"
        style={
          [
            {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "row",
              "justifyContent": "center",
              "overflow": "hidden",
              "paddingLeft": 8,
              "paddingRight": 8,
            },
          ]
        }
      >
        <Text
          accessible={true}
          color="surface.text.staticWhite.normal"
          data-blade-component="text"
          fontFamily="text"
          fontSize={75}
          fontStyle="normal"
          fontWeight="medium"
          lineHeight={75}
          numberOfLines={1}
          style={
            [
              {
                "color": "hsla(0, 0%, 100%, 1)",
                "fontFamily": "Inter",
                "fontSize": 12,
                "fontStyle": "normal",
                "fontWeight": "500",
                "letterSpacing": 0,
                "lineHeight": 18,
                "marginBottom": 0,
                "marginLeft": 0,
                "marginRight": 0,
                "marginTop": 0,
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 0,
                "textDecorationLine": "none",
              },
            ]
          }
        >
          Label
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`<Badge /> should render intense emphasis information color Badge 2`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    data-blade-component="badge"
    display="flex"
    style={
      [
        {
          "display": "flex",
        },
      ]
    }
  >
    <View
      backgroundColor="feedback.background.information.intense"
      data-blade-component="base-box"
      height="20px"
      size="medium"
      style={
        [
          {
            "backgroundColor": "hsla(200, 84%, 44%, 1)",
            "height": 20,
            "textAlign": "left",
          },
          {
            "alignSelf": "center",
            "backgroundColor": "hsla(200, 84%, 44%, 1)",
            "borderRadius": 9999,
            "display": "flex",
            "flexWrap": "nowrap",
          },
        ]
      }
      textAlign="left"
    >
      <View
        alignItems="center"
        data-blade-component="base-box"
        display="flex"
        flexDirection="row"
        justifyContent="center"
        overflow="hidden"
        style={
          [
            {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "row",
              "justifyContent": "center",
              "overflow": "hidden",
              "paddingLeft": 8,
              "paddingRight": 8,
            },
          ]
        }
      >
        <Text
          accessible={true}
          color="surface.text.staticWhite.normal"
          data-blade-component="text"
          fontFamily="text"
          fontSize={75}
          fontStyle="normal"
          fontWeight="medium"
          lineHeight={75}
          numberOfLines={1}
          style={
            [
              {
                "color": "hsla(0, 0%, 100%, 1)",
                "fontFamily": "Inter",
                "fontSize": 12,
                "fontStyle": "normal",
                "fontWeight": "500",
                "letterSpacing": 0,
                "lineHeight": 18,
                "marginBottom": 0,
                "marginLeft": 0,
                "marginRight": 0,
                "marginTop": 0,
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 0,
                "textDecorationLine": "none",
              },
            ]
          }
        >
          Label
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`<Badge /> should render intense emphasis negative color Badge 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    data-blade-component="badge"
    display="flex"
    style={
      [
        {
          "display": "flex",
        },
      ]
    }
  >
    <View
      backgroundColor="feedback.background.negative.intense"
      data-blade-component="base-box"
      height="20px"
      size="medium"
      style={
        [
          {
            "backgroundColor": "hsla(4, 74%, 49%, 1)",
            "height": 20,
            "textAlign": "left",
          },
          {
            "alignSelf": "center",
            "backgroundColor": "hsla(4, 74%, 49%, 1)",
            "borderRadius": 9999,
            "display": "flex",
            "flexWrap": "nowrap",
          },
        ]
      }
      textAlign="left"
    >
      <View
        alignItems="center"
        data-blade-component="base-box"
        display="flex"
        flexDirection="row"
        justifyContent="center"
        overflow="hidden"
        style={
          [
            {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "row",
              "justifyContent": "center",
              "overflow": "hidden",
              "paddingLeft": 8,
              "paddingRight": 8,
            },
          ]
        }
      >
        <Text
          accessible={true}
          color="surface.text.staticWhite.normal"
          data-blade-component="text"
          fontFamily="text"
          fontSize={75}
          fontStyle="normal"
          fontWeight="medium"
          lineHeight={75}
          numberOfLines={1}
          style={
            [
              {
                "color": "hsla(0, 0%, 100%, 1)",
                "fontFamily": "Inter",
                "fontSize": 12,
                "fontStyle": "normal",
                "fontWeight": "500",
                "letterSpacing": 0,
                "lineHeight": 18,
                "marginBottom": 0,
                "marginLeft": 0,
                "marginRight": 0,
                "marginTop": 0,
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 0,
                "textDecorationLine": "none",
              },
            ]
          }
        >
          Label
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`<Badge /> should render intense emphasis negative color Badge 2`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    data-blade-component="badge"
    display="flex"
    style={
      [
        {
          "display": "flex",
        },
      ]
    }
  >
    <View
      backgroundColor="feedback.background.negative.intense"
      data-blade-component="base-box"
      height="20px"
      size="medium"
      style={
        [
          {
            "backgroundColor": "hsla(4, 74%, 49%, 1)",
            "height": 20,
            "textAlign": "left",
          },
          {
            "alignSelf": "center",
            "backgroundColor": "hsla(4, 74%, 49%, 1)",
            "borderRadius": 9999,
            "display": "flex",
            "flexWrap": "nowrap",
          },
        ]
      }
      textAlign="left"
    >
      <View
        alignItems="center"
        data-blade-component="base-box"
        display="flex"
        flexDirection="row"
        justifyContent="center"
        overflow="hidden"
        style={
          [
            {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "row",
              "justifyContent": "center",
              "overflow": "hidden",
              "paddingLeft": 8,
              "paddingRight": 8,
            },
          ]
        }
      >
        <Text
          accessible={true}
          color="surface.text.staticWhite.normal"
          data-blade-component="text"
          fontFamily="text"
          fontSize={75}
          fontStyle="normal"
          fontWeight="medium"
          lineHeight={75}
          numberOfLines={1}
          style={
            [
              {
                "color": "hsla(0, 0%, 100%, 1)",
                "fontFamily": "Inter",
                "fontSize": 12,
                "fontStyle": "normal",
                "fontWeight": "500",
                "letterSpacing": 0,
                "lineHeight": 18,
                "marginBottom": 0,
                "marginLeft": 0,
                "marginRight": 0,
                "marginTop": 0,
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 0,
                "textDecorationLine": "none",
              },
            ]
          }
        >
          Label
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`<Badge /> should render intense emphasis neutral color Badge 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    data-blade-component="badge"
    display="flex"
    style={
      [
        {
          "display": "flex",
        },
      ]
    }
  >
    <View
      backgroundColor="feedback.background.neutral.intense"
      data-blade-component="base-box"
      height="20px"
      size="medium"
      style={
        [
          {
            "backgroundColor": "hsla(211, 29%, 26%, 1)",
            "height": 20,
            "textAlign": "left",
          },
          {
            "alignSelf": "center",
            "backgroundColor": "hsla(211, 29%, 26%, 1)",
            "borderRadius": 9999,
            "display": "flex",
            "flexWrap": "nowrap",
          },
        ]
      }
      textAlign="left"
    >
      <View
        alignItems="center"
        data-blade-component="base-box"
        display="flex"
        flexDirection="row"
        justifyContent="center"
        overflow="hidden"
        style={
          [
            {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "row",
              "justifyContent": "center",
              "overflow": "hidden",
              "paddingLeft": 8,
              "paddingRight": 8,
            },
          ]
        }
      >
        <Text
          accessible={true}
          color="surface.text.staticWhite.normal"
          data-blade-component="text"
          fontFamily="text"
          fontSize={75}
          fontStyle="normal"
          fontWeight="medium"
          lineHeight={75}
          numberOfLines={1}
          style={
            [
              {
                "color": "hsla(0, 0%, 100%, 1)",
                "fontFamily": "Inter",
                "fontSize": 12,
                "fontStyle": "normal",
                "fontWeight": "500",
                "letterSpacing": 0,
                "lineHeight": 18,
                "marginBottom": 0,
                "marginLeft": 0,
                "marginRight": 0,
                "marginTop": 0,
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 0,
                "textDecorationLine": "none",
              },
            ]
          }
        >
          Label
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`<Badge /> should render intense emphasis neutral color Badge 2`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    data-blade-component="badge"
    display="flex"
    style={
      [
        {
          "display": "flex",
        },
      ]
    }
  >
    <View
      backgroundColor="feedback.background.neutral.intense"
      data-blade-component="base-box"
      height="20px"
      size="medium"
      style={
        [
          {
            "backgroundColor": "hsla(211, 29%, 26%, 1)",
            "height": 20,
            "textAlign": "left",
          },
          {
            "alignSelf": "center",
            "backgroundColor": "hsla(211, 29%, 26%, 1)",
            "borderRadius": 9999,
            "display": "flex",
            "flexWrap": "nowrap",
          },
        ]
      }
      textAlign="left"
    >
      <View
        alignItems="center"
        data-blade-component="base-box"
        display="flex"
        flexDirection="row"
        justifyContent="center"
        overflow="hidden"
        style={
          [
            {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "row",
              "justifyContent": "center",
              "overflow": "hidden",
              "paddingLeft": 8,
              "paddingRight": 8,
            },
          ]
        }
      >
        <Text
          accessible={true}
          color="surface.text.staticWhite.normal"
          data-blade-component="text"
          fontFamily="text"
          fontSize={75}
          fontStyle="normal"
          fontWeight="medium"
          lineHeight={75}
          numberOfLines={1}
          style={
            [
              {
                "color": "hsla(0, 0%, 100%, 1)",
                "fontFamily": "Inter",
                "fontSize": 12,
                "fontStyle": "normal",
                "fontWeight": "500",
                "letterSpacing": 0,
                "lineHeight": 18,
                "marginBottom": 0,
                "marginLeft": 0,
                "marginRight": 0,
                "marginTop": 0,
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 0,
                "textDecorationLine": "none",
              },
            ]
          }
        >
          Label
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`<Badge /> should render intense emphasis notice color Badge 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    data-blade-component="badge"
    display="flex"
    style={
      [
        {
          "display": "flex",
        },
      ]
    }
  >
    <View
      backgroundColor="feedback.background.notice.intense"
      data-blade-component="base-box"
      height="20px"
      size="medium"
      style={
        [
          {
            "backgroundColor": "hsla(25, 90%, 48%, 1)",
            "height": 20,
            "textAlign": "left",
          },
          {
            "alignSelf": "center",
            "backgroundColor": "hsla(25, 90%, 48%, 1)",
            "borderRadius": 9999,
            "display": "flex",
            "flexWrap": "nowrap",
          },
        ]
      }
      textAlign="left"
    >
      <View
        alignItems="center"
        data-blade-component="base-box"
        display="flex"
        flexDirection="row"
        justifyContent="center"
        overflow="hidden"
        style={
          [
            {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "row",
              "justifyContent": "center",
              "overflow": "hidden",
              "paddingLeft": 8,
              "paddingRight": 8,
            },
          ]
        }
      >
        <Text
          accessible={true}
          color="surface.text.staticWhite.normal"
          data-blade-component="text"
          fontFamily="text"
          fontSize={75}
          fontStyle="normal"
          fontWeight="medium"
          lineHeight={75}
          numberOfLines={1}
          style={
            [
              {
                "color": "hsla(0, 0%, 100%, 1)",
                "fontFamily": "Inter",
                "fontSize": 12,
                "fontStyle": "normal",
                "fontWeight": "500",
                "letterSpacing": 0,
                "lineHeight": 18,
                "marginBottom": 0,
                "marginLeft": 0,
                "marginRight": 0,
                "marginTop": 0,
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 0,
                "textDecorationLine": "none",
              },
            ]
          }
        >
          Label
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`<Badge /> should render intense emphasis notice color Badge 2`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    data-blade-component="badge"
    display="flex"
    style={
      [
        {
          "display": "flex",
        },
      ]
    }
  >
    <View
      backgroundColor="feedback.background.notice.intense"
      data-blade-component="base-box"
      height="20px"
      size="medium"
      style={
        [
          {
            "backgroundColor": "hsla(25, 90%, 48%, 1)",
            "height": 20,
            "textAlign": "left",
          },
          {
            "alignSelf": "center",
            "backgroundColor": "hsla(25, 90%, 48%, 1)",
            "borderRadius": 9999,
            "display": "flex",
            "flexWrap": "nowrap",
          },
        ]
      }
      textAlign="left"
    >
      <View
        alignItems="center"
        data-blade-component="base-box"
        display="flex"
        flexDirection="row"
        justifyContent="center"
        overflow="hidden"
        style={
          [
            {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "row",
              "justifyContent": "center",
              "overflow": "hidden",
              "paddingLeft": 8,
              "paddingRight": 8,
            },
          ]
        }
      >
        <Text
          accessible={true}
          color="surface.text.staticWhite.normal"
          data-blade-component="text"
          fontFamily="text"
          fontSize={75}
          fontStyle="normal"
          fontWeight="medium"
          lineHeight={75}
          numberOfLines={1}
          style={
            [
              {
                "color": "hsla(0, 0%, 100%, 1)",
                "fontFamily": "Inter",
                "fontSize": 12,
                "fontStyle": "normal",
                "fontWeight": "500",
                "letterSpacing": 0,
                "lineHeight": 18,
                "marginBottom": 0,
                "marginLeft": 0,
                "marginRight": 0,
                "marginTop": 0,
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 0,
                "textDecorationLine": "none",
              },
            ]
          }
        >
          Label
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`<Badge /> should render intense emphasis positive color Badge 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    data-blade-component="badge"
    display="flex"
    style={
      [
        {
          "display": "flex",
        },
      ]
    }
  >
    <View
      backgroundColor="feedback.background.positive.intense"
      data-blade-component="base-box"
      height="20px"
      size="medium"
      style={
        [
          {
            "backgroundColor": "hsla(150, 100%, 32%, 1)",
            "height": 20,
            "textAlign": "left",
          },
          {
            "alignSelf": "center",
            "backgroundColor": "hsla(150, 100%, 32%, 1)",
            "borderRadius": 9999,
            "display": "flex",
            "flexWrap": "nowrap",
          },
        ]
      }
      textAlign="left"
    >
      <View
        alignItems="center"
        data-blade-component="base-box"
        display="flex"
        flexDirection="row"
        justifyContent="center"
        overflow="hidden"
        style={
          [
            {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "row",
              "justifyContent": "center",
              "overflow": "hidden",
              "paddingLeft": 8,
              "paddingRight": 8,
            },
          ]
        }
      >
        <Text
          accessible={true}
          color="surface.text.staticWhite.normal"
          data-blade-component="text"
          fontFamily="text"
          fontSize={75}
          fontStyle="normal"
          fontWeight="medium"
          lineHeight={75}
          numberOfLines={1}
          style={
            [
              {
                "color": "hsla(0, 0%, 100%, 1)",
                "fontFamily": "Inter",
                "fontSize": 12,
                "fontStyle": "normal",
                "fontWeight": "500",
                "letterSpacing": 0,
                "lineHeight": 18,
                "marginBottom": 0,
                "marginLeft": 0,
                "marginRight": 0,
                "marginTop": 0,
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 0,
                "textDecorationLine": "none",
              },
            ]
          }
        >
          Label
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`<Badge /> should render intense emphasis positive color Badge 2`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    data-blade-component="badge"
    display="flex"
    style={
      [
        {
          "display": "flex",
        },
      ]
    }
  >
    <View
      backgroundColor="feedback.background.positive.intense"
      data-blade-component="base-box"
      height="20px"
      size="medium"
      style={
        [
          {
            "backgroundColor": "hsla(150, 100%, 32%, 1)",
            "height": 20,
            "textAlign": "left",
          },
          {
            "alignSelf": "center",
            "backgroundColor": "hsla(150, 100%, 32%, 1)",
            "borderRadius": 9999,
            "display": "flex",
            "flexWrap": "nowrap",
          },
        ]
      }
      textAlign="left"
    >
      <View
        alignItems="center"
        data-blade-component="base-box"
        display="flex"
        flexDirection="row"
        justifyContent="center"
        overflow="hidden"
        style={
          [
            {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "row",
              "justifyContent": "center",
              "overflow": "hidden",
              "paddingLeft": 8,
              "paddingRight": 8,
            },
          ]
        }
      >
        <Text
          accessible={true}
          color="surface.text.staticWhite.normal"
          data-blade-component="text"
          fontFamily="text"
          fontSize={75}
          fontStyle="normal"
          fontWeight="medium"
          lineHeight={75}
          numberOfLines={1}
          style={
            [
              {
                "color": "hsla(0, 0%, 100%, 1)",
                "fontFamily": "Inter",
                "fontSize": 12,
                "fontStyle": "normal",
                "fontWeight": "500",
                "letterSpacing": 0,
                "lineHeight": 18,
                "marginBottom": 0,
                "marginLeft": 0,
                "marginRight": 0,
                "marginTop": 0,
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 0,
                "textDecorationLine": "none",
              },
            ]
          }
        >
          Label
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`<Badge /> should render intense emphasis primary color Badge 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    data-blade-component="badge"
    display="flex"
    style={
      [
        {
          "display": "flex",
        },
      ]
    }
  >
    <View
      backgroundColor="surface.background.primary.intense"
      data-blade-component="base-box"
      height="20px"
      size="medium"
      style={
        [
          {
            "backgroundColor": "hsla(227, 100%, 59%, 1)",
            "height": 20,
            "textAlign": "left",
          },
          {
            "alignSelf": "center",
            "backgroundColor": "hsla(227, 100%, 59%, 1)",
            "borderRadius": 9999,
            "display": "flex",
            "flexWrap": "nowrap",
          },
        ]
      }
      textAlign="left"
    >
      <View
        alignItems="center"
        data-blade-component="base-box"
        display="flex"
        flexDirection="row"
        justifyContent="center"
        overflow="hidden"
        style={
          [
            {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "row",
              "justifyContent": "center",
              "overflow": "hidden",
              "paddingLeft": 8,
              "paddingRight": 8,
            },
          ]
        }
      >
        <Text
          accessible={true}
          color="surface.text.staticWhite.normal"
          data-blade-component="text"
          fontFamily="text"
          fontSize={75}
          fontStyle="normal"
          fontWeight="medium"
          lineHeight={75}
          numberOfLines={1}
          style={
            [
              {
                "color": "hsla(0, 0%, 100%, 1)",
                "fontFamily": "Inter",
                "fontSize": 12,
                "fontStyle": "normal",
                "fontWeight": "500",
                "letterSpacing": 0,
                "lineHeight": 18,
                "marginBottom": 0,
                "marginLeft": 0,
                "marginRight": 0,
                "marginTop": 0,
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 0,
                "textDecorationLine": "none",
              },
            ]
          }
        >
          Label
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`<Badge /> should render intense emphasis primary color Badge 2`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    data-blade-component="badge"
    display="flex"
    style={
      [
        {
          "display": "flex",
        },
      ]
    }
  >
    <View
      backgroundColor="surface.background.primary.intense"
      data-blade-component="base-box"
      height="20px"
      size="medium"
      style={
        [
          {
            "backgroundColor": "hsla(227, 100%, 59%, 1)",
            "height": 20,
            "textAlign": "left",
          },
          {
            "alignSelf": "center",
            "backgroundColor": "hsla(227, 100%, 59%, 1)",
            "borderRadius": 9999,
            "display": "flex",
            "flexWrap": "nowrap",
          },
        ]
      }
      textAlign="left"
    >
      <View
        alignItems="center"
        data-blade-component="base-box"
        display="flex"
        flexDirection="row"
        justifyContent="center"
        overflow="hidden"
        style={
          [
            {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "row",
              "justifyContent": "center",
              "overflow": "hidden",
              "paddingLeft": 8,
              "paddingRight": 8,
            },
          ]
        }
      >
        <Text
          accessible={true}
          color="surface.text.staticWhite.normal"
          data-blade-component="text"
          fontFamily="text"
          fontSize={75}
          fontStyle="normal"
          fontWeight="medium"
          lineHeight={75}
          numberOfLines={1}
          style={
            [
              {
                "color": "hsla(0, 0%, 100%, 1)",
                "fontFamily": "Inter",
                "fontSize": 12,
                "fontStyle": "normal",
                "fontWeight": "500",
                "letterSpacing": 0,
                "lineHeight": 18,
                "marginBottom": 0,
                "marginLeft": 0,
                "marginRight": 0,
                "marginTop": 0,
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 0,
                "textDecorationLine": "none",
              },
            ]
          }
        >
          Label
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`<Badge /> should render large size Badge 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    data-blade-component="badge"
    display="flex"
    style={
      [
        {
          "display": "flex",
        },
      ]
    }
  >
    <View
      backgroundColor="feedback.background.neutral.subtle"
      data-blade-component="base-box"
      height="24px"
      size="large"
      style={
        [
          {
            "backgroundColor": "hsla(211, 20%, 52%, 0.09)",
            "height": 24,
            "textAlign": "left",
          },
          {
            "alignSelf": "center",
            "backgroundColor": "hsla(211, 20%, 52%, 0.09)",
            "borderRadius": 9999,
            "display": "flex",
            "flexWrap": "nowrap",
          },
        ]
      }
      textAlign="left"
    >
      <View
        alignItems="center"
        data-blade-component="base-box"
        display="flex"
        flexDirection="row"
        justifyContent="center"
        overflow="hidden"
        style={
          [
            {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "row",
              "justifyContent": "center",
              "overflow": "hidden",
              "paddingLeft": 12,
              "paddingRight": 12,
            },
          ]
        }
      >
        <Text
          accessible={true}
          color="feedback.text.neutral.intense"
          data-blade-component="text"
          fontFamily="text"
          fontSize={75}
          fontStyle="normal"
          fontWeight="medium"
          lineHeight={75}
          numberOfLines={1}
          style={
            [
              {
                "color": "hsla(211, 33%, 21%, 1)",
                "fontFamily": "Inter",
                "fontSize": 12,
                "fontStyle": "normal",
                "fontWeight": "500",
                "letterSpacing": 0,
                "lineHeight": 18,
                "marginBottom": 0,
                "marginLeft": 0,
                "marginRight": 0,
                "marginTop": 0,
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 0,
                "textDecorationLine": "none",
              },
            ]
          }
        >
          Label
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`<Badge /> should render medium size Badge 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    data-blade-component="badge"
    display="flex"
    style={
      [
        {
          "display": "flex",
        },
      ]
    }
  >
    <View
      backgroundColor="feedback.background.neutral.subtle"
      data-blade-component="base-box"
      height="20px"
      size="medium"
      style={
        [
          {
            "backgroundColor": "hsla(211, 20%, 52%, 0.09)",
            "height": 20,
            "textAlign": "left",
          },
          {
            "alignSelf": "center",
            "backgroundColor": "hsla(211, 20%, 52%, 0.09)",
            "borderRadius": 9999,
            "display": "flex",
            "flexWrap": "nowrap",
          },
        ]
      }
      textAlign="left"
    >
      <View
        alignItems="center"
        data-blade-component="base-box"
        display="flex"
        flexDirection="row"
        justifyContent="center"
        overflow="hidden"
        style={
          [
            {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "row",
              "justifyContent": "center",
              "overflow": "hidden",
              "paddingLeft": 8,
              "paddingRight": 8,
            },
          ]
        }
      >
        <Text
          accessible={true}
          color="feedback.text.neutral.intense"
          data-blade-component="text"
          fontFamily="text"
          fontSize={75}
          fontStyle="normal"
          fontWeight="medium"
          lineHeight={75}
          numberOfLines={1}
          style={
            [
              {
                "color": "hsla(211, 33%, 21%, 1)",
                "fontFamily": "Inter",
                "fontSize": 12,
                "fontStyle": "normal",
                "fontWeight": "500",
                "letterSpacing": 0,
                "lineHeight": 18,
                "marginBottom": 0,
                "marginLeft": 0,
                "marginRight": 0,
                "marginTop": 0,
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 0,
                "textDecorationLine": "none",
              },
            ]
          }
        >
          Label
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`<Badge /> should render small size Badge 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    data-blade-component="badge"
    display="flex"
    style={
      [
        {
          "display": "flex",
        },
      ]
    }
  >
    <View
      backgroundColor="feedback.background.neutral.subtle"
      data-blade-component="base-box"
      height="16px"
      size="small"
      style={
        [
          {
            "backgroundColor": "hsla(211, 20%, 52%, 0.09)",
            "height": 16,
            "textAlign": "left",
          },
          {
            "alignSelf": "center",
            "backgroundColor": "hsla(211, 20%, 52%, 0.09)",
            "borderRadius": 9999,
            "display": "flex",
            "flexWrap": "nowrap",
          },
        ]
      }
      textAlign="left"
    >
      <View
        alignItems="center"
        data-blade-component="base-box"
        display="flex"
        flexDirection="row"
        justifyContent="center"
        overflow="hidden"
        style={
          [
            {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "row",
              "justifyContent": "center",
              "overflow": "hidden",
              "paddingLeft": 8,
              "paddingRight": 8,
            },
          ]
        }
      >
        <Text
          accessible={true}
          color="feedback.text.neutral.intense"
          data-blade-component="text"
          fontFamily="text"
          fontSize={25}
          fontStyle="normal"
          fontWeight="medium"
          lineHeight={25}
          numberOfLines={1}
          style={
            [
              {
                "color": "hsla(211, 33%, 21%, 1)",
                "fontFamily": "Inter",
                "fontSize": 10,
                "fontStyle": "normal",
                "fontWeight": "500",
                "letterSpacing": 0,
                "lineHeight": 14,
                "marginBottom": 0,
                "marginLeft": 0,
                "marginRight": 0,
                "marginTop": 0,
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 0,
                "textDecorationLine": "none",
              },
            ]
          }
        >
          Label
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`<Badge /> should render subtle emphasis information color Badge 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    data-blade-component="badge"
    display="flex"
    style={
      [
        {
          "display": "flex",
        },
      ]
    }
  >
    <View
      backgroundColor="feedback.background.information.subtle"
      data-blade-component="base-box"
      height="20px"
      size="medium"
      style={
        [
          {
            "backgroundColor": "hsla(200, 84%, 44%, 0.09)",
            "height": 20,
            "textAlign": "left",
          },
          {
            "alignSelf": "center",
            "backgroundColor": "hsla(200, 84%, 44%, 0.09)",
            "borderRadius": 9999,
            "display": "flex",
            "flexWrap": "nowrap",
          },
        ]
      }
      textAlign="left"
    >
      <View
        alignItems="center"
        data-blade-component="base-box"
        display="flex"
        flexDirection="row"
        justifyContent="center"
        overflow="hidden"
        style={
          [
            {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "row",
              "justifyContent": "center",
              "overflow": "hidden",
              "paddingLeft": 8,
              "paddingRight": 8,
            },
          ]
        }
      >
        <Text
          accessible={true}
          color="feedback.text.information.intense"
          data-blade-component="text"
          fontFamily="text"
          fontSize={75}
          fontStyle="normal"
          fontWeight="medium"
          lineHeight={75}
          numberOfLines={1}
          style={
            [
              {
                "color": "hsla(200, 84%, 37%, 1)",
                "fontFamily": "Inter",
                "fontSize": 12,
                "fontStyle": "normal",
                "fontWeight": "500",
                "letterSpacing": 0,
                "lineHeight": 18,
                "marginBottom": 0,
                "marginLeft": 0,
                "marginRight": 0,
                "marginTop": 0,
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 0,
                "textDecorationLine": "none",
              },
            ]
          }
        >
          Label
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`<Badge /> should render subtle emphasis information color Badge 2`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    data-blade-component="badge"
    display="flex"
    style={
      [
        {
          "display": "flex",
        },
      ]
    }
  >
    <View
      backgroundColor="feedback.background.information.subtle"
      data-blade-component="base-box"
      height="20px"
      size="medium"
      style={
        [
          {
            "backgroundColor": "hsla(200, 84%, 44%, 0.09)",
            "height": 20,
            "textAlign": "left",
          },
          {
            "alignSelf": "center",
            "backgroundColor": "hsla(200, 84%, 44%, 0.09)",
            "borderRadius": 9999,
            "display": "flex",
            "flexWrap": "nowrap",
          },
        ]
      }
      textAlign="left"
    >
      <View
        alignItems="center"
        data-blade-component="base-box"
        display="flex"
        flexDirection="row"
        justifyContent="center"
        overflow="hidden"
        style={
          [
            {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "row",
              "justifyContent": "center",
              "overflow": "hidden",
              "paddingLeft": 8,
              "paddingRight": 8,
            },
          ]
        }
      >
        <Text
          accessible={true}
          color="feedback.text.information.intense"
          data-blade-component="text"
          fontFamily="text"
          fontSize={75}
          fontStyle="normal"
          fontWeight="medium"
          lineHeight={75}
          numberOfLines={1}
          style={
            [
              {
                "color": "hsla(200, 84%, 37%, 1)",
                "fontFamily": "Inter",
                "fontSize": 12,
                "fontStyle": "normal",
                "fontWeight": "500",
                "letterSpacing": 0,
                "lineHeight": 18,
                "marginBottom": 0,
                "marginLeft": 0,
                "marginRight": 0,
                "marginTop": 0,
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 0,
                "textDecorationLine": "none",
              },
            ]
          }
        >
          Label
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`<Badge /> should render subtle emphasis negative color Badge 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    data-blade-component="badge"
    display="flex"
    style={
      [
        {
          "display": "flex",
        },
      ]
    }
  >
    <View
      backgroundColor="feedback.background.negative.subtle"
      data-blade-component="base-box"
      height="20px"
      size="medium"
      style={
        [
          {
            "backgroundColor": "hsla(4, 74%, 49%, 0.09)",
            "height": 20,
            "textAlign": "left",
          },
          {
            "alignSelf": "center",
            "backgroundColor": "hsla(4, 74%, 49%, 0.09)",
            "borderRadius": 9999,
            "display": "flex",
            "flexWrap": "nowrap",
          },
        ]
      }
      textAlign="left"
    >
      <View
        alignItems="center"
        data-blade-component="base-box"
        display="flex"
        flexDirection="row"
        justifyContent="center"
        overflow="hidden"
        style={
          [
            {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "row",
              "justifyContent": "center",
              "overflow": "hidden",
              "paddingLeft": 8,
              "paddingRight": 8,
            },
          ]
        }
      >
        <Text
          accessible={true}
          color="feedback.text.negative.intense"
          data-blade-component="text"
          fontFamily="text"
          fontSize={75}
          fontStyle="normal"
          fontWeight="medium"
          lineHeight={75}
          numberOfLines={1}
          style={
            [
              {
                "color": "hsla(4, 74%, 49%, 1)",
                "fontFamily": "Inter",
                "fontSize": 12,
                "fontStyle": "normal",
                "fontWeight": "500",
                "letterSpacing": 0,
                "lineHeight": 18,
                "marginBottom": 0,
                "marginLeft": 0,
                "marginRight": 0,
                "marginTop": 0,
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 0,
                "textDecorationLine": "none",
              },
            ]
          }
        >
          Label
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`<Badge /> should render subtle emphasis negative color Badge 2`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    data-blade-component="badge"
    display="flex"
    style={
      [
        {
          "display": "flex",
        },
      ]
    }
  >
    <View
      backgroundColor="feedback.background.negative.subtle"
      data-blade-component="base-box"
      height="20px"
      size="medium"
      style={
        [
          {
            "backgroundColor": "hsla(4, 74%, 49%, 0.09)",
            "height": 20,
            "textAlign": "left",
          },
          {
            "alignSelf": "center",
            "backgroundColor": "hsla(4, 74%, 49%, 0.09)",
            "borderRadius": 9999,
            "display": "flex",
            "flexWrap": "nowrap",
          },
        ]
      }
      textAlign="left"
    >
      <View
        alignItems="center"
        data-blade-component="base-box"
        display="flex"
        flexDirection="row"
        justifyContent="center"
        overflow="hidden"
        style={
          [
            {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "row",
              "justifyContent": "center",
              "overflow": "hidden",
              "paddingLeft": 8,
              "paddingRight": 8,
            },
          ]
        }
      >
        <Text
          accessible={true}
          color="feedback.text.negative.intense"
          data-blade-component="text"
          fontFamily="text"
          fontSize={75}
          fontStyle="normal"
          fontWeight="medium"
          lineHeight={75}
          numberOfLines={1}
          style={
            [
              {
                "color": "hsla(4, 74%, 49%, 1)",
                "fontFamily": "Inter",
                "fontSize": 12,
                "fontStyle": "normal",
                "fontWeight": "500",
                "letterSpacing": 0,
                "lineHeight": 18,
                "marginBottom": 0,
                "marginLeft": 0,
                "marginRight": 0,
                "marginTop": 0,
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 0,
                "textDecorationLine": "none",
              },
            ]
          }
        >
          Label
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`<Badge /> should render subtle emphasis neutral color Badge 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    data-blade-component="badge"
    display="flex"
    style={
      [
        {
          "display": "flex",
        },
      ]
    }
  >
    <View
      backgroundColor="feedback.background.neutral.subtle"
      data-blade-component="base-box"
      height="20px"
      size="medium"
      style={
        [
          {
            "backgroundColor": "hsla(211, 20%, 52%, 0.09)",
            "height": 20,
            "textAlign": "left",
          },
          {
            "alignSelf": "center",
            "backgroundColor": "hsla(211, 20%, 52%, 0.09)",
            "borderRadius": 9999,
            "display": "flex",
            "flexWrap": "nowrap",
          },
        ]
      }
      textAlign="left"
    >
      <View
        alignItems="center"
        data-blade-component="base-box"
        display="flex"
        flexDirection="row"
        justifyContent="center"
        overflow="hidden"
        style={
          [
            {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "row",
              "justifyContent": "center",
              "overflow": "hidden",
              "paddingLeft": 8,
              "paddingRight": 8,
            },
          ]
        }
      >
        <Text
          accessible={true}
          color="feedback.text.neutral.intense"
          data-blade-component="text"
          fontFamily="text"
          fontSize={75}
          fontStyle="normal"
          fontWeight="medium"
          lineHeight={75}
          numberOfLines={1}
          style={
            [
              {
                "color": "hsla(211, 33%, 21%, 1)",
                "fontFamily": "Inter",
                "fontSize": 12,
                "fontStyle": "normal",
                "fontWeight": "500",
                "letterSpacing": 0,
                "lineHeight": 18,
                "marginBottom": 0,
                "marginLeft": 0,
                "marginRight": 0,
                "marginTop": 0,
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 0,
                "textDecorationLine": "none",
              },
            ]
          }
        >
          Label
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`<Badge /> should render subtle emphasis neutral color Badge 2`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    data-blade-component="badge"
    display="flex"
    style={
      [
        {
          "display": "flex",
        },
      ]
    }
  >
    <View
      backgroundColor="feedback.background.neutral.subtle"
      data-blade-component="base-box"
      height="20px"
      size="medium"
      style={
        [
          {
            "backgroundColor": "hsla(211, 20%, 52%, 0.09)",
            "height": 20,
            "textAlign": "left",
          },
          {
            "alignSelf": "center",
            "backgroundColor": "hsla(211, 20%, 52%, 0.09)",
            "borderRadius": 9999,
            "display": "flex",
            "flexWrap": "nowrap",
          },
        ]
      }
      textAlign="left"
    >
      <View
        alignItems="center"
        data-blade-component="base-box"
        display="flex"
        flexDirection="row"
        justifyContent="center"
        overflow="hidden"
        style={
          [
            {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "row",
              "justifyContent": "center",
              "overflow": "hidden",
              "paddingLeft": 8,
              "paddingRight": 8,
            },
          ]
        }
      >
        <Text
          accessible={true}
          color="feedback.text.neutral.intense"
          data-blade-component="text"
          fontFamily="text"
          fontSize={75}
          fontStyle="normal"
          fontWeight="medium"
          lineHeight={75}
          numberOfLines={1}
          style={
            [
              {
                "color": "hsla(211, 33%, 21%, 1)",
                "fontFamily": "Inter",
                "fontSize": 12,
                "fontStyle": "normal",
                "fontWeight": "500",
                "letterSpacing": 0,
                "lineHeight": 18,
                "marginBottom": 0,
                "marginLeft": 0,
                "marginRight": 0,
                "marginTop": 0,
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 0,
                "textDecorationLine": "none",
              },
            ]
          }
        >
          Label
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`<Badge /> should render subtle emphasis notice color Badge 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    data-blade-component="badge"
    display="flex"
    style={
      [
        {
          "display": "flex",
        },
      ]
    }
  >
    <View
      backgroundColor="feedback.background.notice.subtle"
      data-blade-component="base-box"
      height="20px"
      size="medium"
      style={
        [
          {
            "backgroundColor": "hsla(25, 90%, 48%, 0.09)",
            "height": 20,
            "textAlign": "left",
          },
          {
            "alignSelf": "center",
            "backgroundColor": "hsla(25, 90%, 48%, 0.09)",
            "borderRadius": 9999,
            "display": "flex",
            "flexWrap": "nowrap",
          },
        ]
      }
      textAlign="left"
    >
      <View
        alignItems="center"
        data-blade-component="base-box"
        display="flex"
        flexDirection="row"
        justifyContent="center"
        overflow="hidden"
        style={
          [
            {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "row",
              "justifyContent": "center",
              "overflow": "hidden",
              "paddingLeft": 8,
              "paddingRight": 8,
            },
          ]
        }
      >
        <Text
          accessible={true}
          color="feedback.text.notice.intense"
          data-blade-component="text"
          fontFamily="text"
          fontSize={75}
          fontStyle="normal"
          fontWeight="medium"
          lineHeight={75}
          numberOfLines={1}
          style={
            [
              {
                "color": "hsla(25, 85%, 42%, 1)",
                "fontFamily": "Inter",
                "fontSize": 12,
                "fontStyle": "normal",
                "fontWeight": "500",
                "letterSpacing": 0,
                "lineHeight": 18,
                "marginBottom": 0,
                "marginLeft": 0,
                "marginRight": 0,
                "marginTop": 0,
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 0,
                "textDecorationLine": "none",
              },
            ]
          }
        >
          Label
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`<Badge /> should render subtle emphasis notice color Badge 2`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    data-blade-component="badge"
    display="flex"
    style={
      [
        {
          "display": "flex",
        },
      ]
    }
  >
    <View
      backgroundColor="feedback.background.notice.subtle"
      data-blade-component="base-box"
      height="20px"
      size="medium"
      style={
        [
          {
            "backgroundColor": "hsla(25, 90%, 48%, 0.09)",
            "height": 20,
            "textAlign": "left",
          },
          {
            "alignSelf": "center",
            "backgroundColor": "hsla(25, 90%, 48%, 0.09)",
            "borderRadius": 9999,
            "display": "flex",
            "flexWrap": "nowrap",
          },
        ]
      }
      textAlign="left"
    >
      <View
        alignItems="center"
        data-blade-component="base-box"
        display="flex"
        flexDirection="row"
        justifyContent="center"
        overflow="hidden"
        style={
          [
            {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "row",
              "justifyContent": "center",
              "overflow": "hidden",
              "paddingLeft": 8,
              "paddingRight": 8,
            },
          ]
        }
      >
        <Text
          accessible={true}
          color="feedback.text.notice.intense"
          data-blade-component="text"
          fontFamily="text"
          fontSize={75}
          fontStyle="normal"
          fontWeight="medium"
          lineHeight={75}
          numberOfLines={1}
          style={
            [
              {
                "color": "hsla(25, 85%, 42%, 1)",
                "fontFamily": "Inter",
                "fontSize": 12,
                "fontStyle": "normal",
                "fontWeight": "500",
                "letterSpacing": 0,
                "lineHeight": 18,
                "marginBottom": 0,
                "marginLeft": 0,
                "marginRight": 0,
                "marginTop": 0,
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 0,
                "textDecorationLine": "none",
              },
            ]
          }
        >
          Label
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`<Badge /> should render subtle emphasis positive color Badge 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    data-blade-component="badge"
    display="flex"
    style={
      [
        {
          "display": "flex",
        },
      ]
    }
  >
    <View
      backgroundColor="feedback.background.positive.subtle"
      data-blade-component="base-box"
      height="20px"
      size="medium"
      style={
        [
          {
            "backgroundColor": "hsla(150, 100%, 32%, 0.09)",
            "height": 20,
            "textAlign": "left",
          },
          {
            "alignSelf": "center",
            "backgroundColor": "hsla(150, 100%, 32%, 0.09)",
            "borderRadius": 9999,
            "display": "flex",
            "flexWrap": "nowrap",
          },
        ]
      }
      textAlign="left"
    >
      <View
        alignItems="center"
        data-blade-component="base-box"
        display="flex"
        flexDirection="row"
        justifyContent="center"
        overflow="hidden"
        style={
          [
            {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "row",
              "justifyContent": "center",
              "overflow": "hidden",
              "paddingLeft": 8,
              "paddingRight": 8,
            },
          ]
        }
      >
        <Text
          accessible={true}
          color="feedback.text.positive.intense"
          data-blade-component="text"
          fontFamily="text"
          fontSize={75}
          fontStyle="normal"
          fontWeight="medium"
          lineHeight={75}
          numberOfLines={1}
          style={
            [
              {
                "color": "hsla(150, 100%, 27%, 1)",
                "fontFamily": "Inter",
                "fontSize": 12,
                "fontStyle": "normal",
                "fontWeight": "500",
                "letterSpacing": 0,
                "lineHeight": 18,
                "marginBottom": 0,
                "marginLeft": 0,
                "marginRight": 0,
                "marginTop": 0,
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 0,
                "textDecorationLine": "none",
              },
            ]
          }
        >
          Label
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`<Badge /> should render subtle emphasis positive color Badge 2`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    data-blade-component="badge"
    display="flex"
    style={
      [
        {
          "display": "flex",
        },
      ]
    }
  >
    <View
      backgroundColor="feedback.background.positive.subtle"
      data-blade-component="base-box"
      height="20px"
      size="medium"
      style={
        [
          {
            "backgroundColor": "hsla(150, 100%, 32%, 0.09)",
            "height": 20,
            "textAlign": "left",
          },
          {
            "alignSelf": "center",
            "backgroundColor": "hsla(150, 100%, 32%, 0.09)",
            "borderRadius": 9999,
            "display": "flex",
            "flexWrap": "nowrap",
          },
        ]
      }
      textAlign="left"
    >
      <View
        alignItems="center"
        data-blade-component="base-box"
        display="flex"
        flexDirection="row"
        justifyContent="center"
        overflow="hidden"
        style={
          [
            {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "row",
              "justifyContent": "center",
              "overflow": "hidden",
              "paddingLeft": 8,
              "paddingRight": 8,
            },
          ]
        }
      >
        <Text
          accessible={true}
          color="feedback.text.positive.intense"
          data-blade-component="text"
          fontFamily="text"
          fontSize={75}
          fontStyle="normal"
          fontWeight="medium"
          lineHeight={75}
          numberOfLines={1}
          style={
            [
              {
                "color": "hsla(150, 100%, 27%, 1)",
                "fontFamily": "Inter",
                "fontSize": 12,
                "fontStyle": "normal",
                "fontWeight": "500",
                "letterSpacing": 0,
                "lineHeight": 18,
                "marginBottom": 0,
                "marginLeft": 0,
                "marginRight": 0,
                "marginTop": 0,
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 0,
                "textDecorationLine": "none",
              },
            ]
          }
        >
          Label
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`<Badge /> should render subtle emphasis primary color Badge 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    data-blade-component="badge"
    display="flex"
    style={
      [
        {
          "display": "flex",
        },
      ]
    }
  >
    <View
      backgroundColor="surface.background.primary.subtle"
      data-blade-component="base-box"
      height="20px"
      size="medium"
      style={
        [
          {
            "backgroundColor": "hsla(227, 100%, 59%, 0.09)",
            "height": 20,
            "textAlign": "left",
          },
          {
            "alignSelf": "center",
            "backgroundColor": "hsla(227, 100%, 59%, 0.09)",
            "borderRadius": 9999,
            "display": "flex",
            "flexWrap": "nowrap",
          },
        ]
      }
      textAlign="left"
    >
      <View
        alignItems="center"
        data-blade-component="base-box"
        display="flex"
        flexDirection="row"
        justifyContent="center"
        overflow="hidden"
        style={
          [
            {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "row",
              "justifyContent": "center",
              "overflow": "hidden",
              "paddingLeft": 8,
              "paddingRight": 8,
            },
          ]
        }
      >
        <Text
          accessible={true}
          color="surface.text.primary.normal"
          data-blade-component="text"
          fontFamily="text"
          fontSize={75}
          fontStyle="normal"
          fontWeight="medium"
          lineHeight={75}
          numberOfLines={1}
          style={
            [
              {
                "color": "hsla(227, 100%, 59%, 1)",
                "fontFamily": "Inter",
                "fontSize": 12,
                "fontStyle": "normal",
                "fontWeight": "500",
                "letterSpacing": 0,
                "lineHeight": 18,
                "marginBottom": 0,
                "marginLeft": 0,
                "marginRight": 0,
                "marginTop": 0,
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 0,
                "textDecorationLine": "none",
              },
            ]
          }
        >
          Label
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`<Badge /> should render subtle emphasis primary color Badge 2`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    data-blade-component="badge"
    display="flex"
    style={
      [
        {
          "display": "flex",
        },
      ]
    }
  >
    <View
      backgroundColor="surface.background.primary.subtle"
      data-blade-component="base-box"
      height="20px"
      size="medium"
      style={
        [
          {
            "backgroundColor": "hsla(227, 100%, 59%, 0.09)",
            "height": 20,
            "textAlign": "left",
          },
          {
            "alignSelf": "center",
            "backgroundColor": "hsla(227, 100%, 59%, 0.09)",
            "borderRadius": 9999,
            "display": "flex",
            "flexWrap": "nowrap",
          },
        ]
      }
      textAlign="left"
    >
      <View
        alignItems="center"
        data-blade-component="base-box"
        display="flex"
        flexDirection="row"
        justifyContent="center"
        overflow="hidden"
        style={
          [
            {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "row",
              "justifyContent": "center",
              "overflow": "hidden",
              "paddingLeft": 8,
              "paddingRight": 8,
            },
          ]
        }
      >
        <Text
          accessible={true}
          color="surface.text.primary.normal"
          data-blade-component="text"
          fontFamily="text"
          fontSize={75}
          fontStyle="normal"
          fontWeight="medium"
          lineHeight={75}
          numberOfLines={1}
          style={
            [
              {
                "color": "hsla(227, 100%, 59%, 1)",
                "fontFamily": "Inter",
                "fontSize": 12,
                "fontStyle": "normal",
                "fontWeight": "500",
                "letterSpacing": 0,
                "lineHeight": 18,
                "marginBottom": 0,
                "marginLeft": 0,
                "marginRight": 0,
                "marginTop": 0,
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 0,
                "textDecorationLine": "none",
              },
            ]
          }
        >
          Label
        </Text>
      </View>
    </View>
  </View>
</View>
`;
